[gd_scene load_steps=4 format=3 uid="uid://diamy4voo3nr0"]

[ext_resource type="Script" path="res://main.gd" id="1_y262a"]
[ext_resource type="TileSet" uid="uid://b3uhm77388uhf" path="res://tile_set.tres" id="2_c4w5l"]
[ext_resource type="PackedScene" uid="uid://boqpljek0rq21" path="res://stage_button.tscn" id="2_udg0w"]

[node name="Main" type="Node"]
script = ExtResource("1_y262a")

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(0.707967, 0.707967, 0.707967, 1)
visibility_layer = 16
tile_set = ExtResource("2_c4w5l")
format = 2
layer_0/name = "Floor"
layer_0/z_index = -2
layer_0/tile_data = PackedInt32Array(65537, 65538, 1, 131073, 65538, 1, 196609, 65538, 1, 262145, 65538, 1, 327681, 65538, 1, 393217, 65538, 1, 458753, 65538, 1, 65538, 65538, 1, 131074, 65538, 1, 196610, 65538, 1, 262146, 65538, 1, 327682, 65538, 1, 393218, 65538, 1, 458754, 65538, 1, 65539, 65538, 1, 131075, 65538, 1, 196611, 65538, 1, 262147, 65538, 1, 327683, 65538, 1, 393219, 65538, 1, 458755, 65538, 1, 65540, 65538, 1, 131076, 65538, 1, 196612, 65538, 1, 262148, 65538, 1, 327684, 65538, 1, 393220, 65538, 1, 458756, 65538, 1, 65541, 65538, 1, 131077, 65538, 1, 196613, 65538, 1, 262149, 65538, 1, 327685, 65538, 1, 393221, 65538, 1, 458757, 65538, 1, 65542, 65538, 1, 131078, 65538, 1, 196614, 65538, 1, 262150, 65538, 1, 327686, 65538, 1, 393222, 65538, 1, 458758, 65538, 1, 65543, 65538, 1, 131079, 65538, 1, 196615, 65538, 1, 262151, 65538, 1, 327687, 65538, 1, 393223, 65538, 1, 458759, 65538, 1, 65544, 65538, 1, 131080, 65538, 1, 196616, 65538, 1, 262152, 65538, 1, 327688, 65538, 1, 393224, 65538, 1, 458760, 65538, 1, 65545, 65538, 1, 131081, 65538, 1, 196617, 65538, 1, 262153, 65538, 1, 327689, 65538, 1, 393225, 65538, 1, 458761, 65538, 1, 65546, 65538, 1, 131082, 65538, 1, 196618, 65538, 1, 262154, 65538, 1, 327690, 65538, 1, 393226, 65538, 1, 458762, 65538, 1, 65547, 65538, 1, 131083, 65538, 1, 196619, 65538, 1, 262155, 65538, 1, 327691, 65538, 1, 393227, 65538, 1, 458763, 65538, 1, 65548, 65538, 1, 131084, 65538, 1, 196620, 65538, 1, 262156, 65538, 1, 327692, 65538, 1, 393228, 65538, 1, 458764, 65538, 1, 65549, 65538, 1, 131085, 65538, 1, 196621, 65538, 1, 262157, 65538, 1, 327693, 65538, 1, 393229, 65538, 1, 458765, 65538, 1, 65550, 65538, 1, 131086, 65538, 1, 196622, 65538, 1, 262158, 65538, 1, 327694, 65538, 1, 393230, 65538, 1, 458766, 65538, 1, 65551, 131074, 1, 131087, 131074, 1, 196623, 131074, 1, 262159, 131074, 1, 327695, 131074, 1, 393231, 131074, 1, 458767, 131074, 1, 524303, 131074, 2, 1, 65538, 0, 2, 65538, 0, 3, 65538, 0, 4, 65538, 0, 5, 65538, 0, 6, 65538, 0, 7, 65538, 0, 8, 65538, 0, 9, 65538, 0, 10, 65538, 0, 11, 65538, 0, 12, 65538, 0, 13, 65538, 0, 14, 65538, 0, 15, 131074, 0, 65536, 2, 1, 131072, 2, 1, 196608, 2, 1, 262144, 2, 1, 327680, 2, 1, 393216, 2, 1, 458752, 2, 1, 524288, 2, 2, 0, 2, 0, 524289, 65538, 2, 524290, 65538, 2, 524291, 65538, 2, 524292, 65538, 2, 524293, 65538, 2, 524294, 65538, 2, 524295, 65538, 2, 524296, 65538, 2, 524297, 65538, 2, 524298, 65538, 2, 524299, 65538, 2, 524300, 65538, 2, 524301, 65538, 2, 524302, 65538, 2)
layer_1/name = "Background"
layer_1/z_index = -3
layer_1/tile_data = PackedInt32Array(15, 655362, 0, 14, 655362, 0, 13, 655362, 0, 12, 655362, 0, 11, 655362, 0, 10, 655362, 0, 9, 655362, 0, 8, 655362, 0, 7, 655362, 0, 6, 655362, 0, 5, 655362, 0, 4, 655362, 0, 3, 655362, 0, 2, 655362, 0, 1, 655362, 0, 0, 655362, 0, 65536, 655362, 0, 131072, 655362, 0, 196608, 655362, 0, 262144, 655362, 0, 327680, 655362, 0, 393216, 655362, 0, 458752, 655362, 0, 524288, 655362, 0, 524289, 655362, 0, 524290, 655362, 0, 524291, 655362, 0, 524292, 655362, 0, 524293, 655362, 0, 524294, 655362, 0, 524295, 655362, 0, 524296, 655362, 0, 524297, 655362, 0, 524298, 655362, 0, 524299, 655362, 0, 524300, 655362, 0, 524301, 655362, 0, 524302, 655362, 0, 524303, 655362, 0, 65551, 655362, 0, 131087, 655362, 0, 196623, 655362, 0, 262159, 655362, 0, 327695, 655362, 0, 393231, 655362, 0, 458767, 655362, 0)
layer_2/name = "Underfoot"
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(262145, 589827, 5, 327681, 589827, 3, 393217, 589827, 4, 458753, 589827, 5, 327682, 655363, 3, 393218, 1, 327680, 458754, 655363, 5, 327683, 655363, 3, 393219, 655363, 1342177282, 458755, 655363, 5, 327684, 720899, 5, 393220, 720899, 3, 458756, 720899, 5, 458763, 655363, 1342177282, 327692, 1, 393216, 393228, 589827, 3, 458764, 720899, 5, 262157, 655363, 805306370, 327693, 589827, 4, 393229, 720899, 5, 458765, 1, 196608, 196609, 589827, 3, 262146, 655363, 3, 262147, 655363, 3, 262148, 720899, 3, 458762, 524291, 1342177280, 393227, 1, 327680, 262156, 1, 131072, 196621, 524291, 1610612737, 262158, 1, 327680)
layer_3/name = "Interactable"
layer_3/tile_data = PackedInt32Array(196609, 1, 458752, 196610, 524291, 1, 327682, 1, 458752, 262147, 1, 458752, 393220, 1, 458752, 393230, 1, 458752)

[node name="StageSelect" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="HFlowContainer" type="HFlowContainer" parent="StageSelect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -176.0
offset_right = 512.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
alignment = 1

[node name="Stage1Button" parent="StageSelect/HFlowContainer" instance=ExtResource("2_udg0w")]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 32
id = 1

[node name="Stage2Button" parent="StageSelect/HFlowContainer" instance=ExtResource("2_udg0w")]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 32
id = 2

[node name="Stage3Button" parent="StageSelect/HFlowContainer" instance=ExtResource("2_udg0w")]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 32
id = 3

[node name="Stage4Button" parent="StageSelect/HFlowContainer" instance=ExtResource("2_udg0w")]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 32
id = 4

[node name="Stage5Button" parent="StageSelect/HFlowContainer" instance=ExtResource("2_udg0w")]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 32
id = 5

[node name="Stage6Button" parent="StageSelect/HFlowContainer" instance=ExtResource("2_udg0w")]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 32
id = 6

[node name="Back" type="Button" parent="StageSelect"]
custom_minimum_size = Vector2(192, 96)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -176.0
offset_right = 96.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = 64.0
offset_right = 91.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Diamond Miner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(256, 96)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Start New"

[node name="Levels" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(256, 96)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Level Select"

[node name="Quit" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(256, 96)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Quit Game"

[connection signal="pressed" from="StageSelect/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Start" to="." method="stage_pressed" binds= [1]]
[connection signal="pressed" from="MainMenu/VBoxContainer/Levels" to="." method="show_stages"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
